--- a/index2.html
+++ b/index2.html
@@ -13,96 +13,96 @@
         <div class="exhibition">This exhibition records the Chinese ancient handed down folk strange anecdotes. It records ghosts and demons and satirizes the times. </div>
         </div>
     </div>
-    <div class="choose">
+    <div class="content">
         <div class="list-projects">
-          <div class="content-text1">
+          <div class="content-text">
             <h2>Evil Dead</h2> 
           </div> 
-          <div class="content-text2">
+          <div class="content-text">
             <h2>Bite the Ghost</h2> 
           </div> 
-          <div class="content-text3">
+          <div class="content-text">
             <h2>Wang Liulang</h2> 
           </div> 
-          <div class="content-text4">
+          <div class="content-text">
             <h2>Ghosts Cry</h2> 
           </div> 
-          <div class="content-text5">
+          <div class="content-text">
             <h2>Painted Skin</h2> 
           </div> 
-          <div class="content-text6">
+          <div class="content-text">
             <h2>Nie Xiaoqian</h2> 
           </div> 
-          <div class="content-text7">
+          <div class="content-text">
             <h2>Beauty Head</h2> 
           </div> 
-          <div class="content-text8">
+          <div class="content-text">
             <h2>Yama</h2> 
           </div> 
-          <div class="content-text9">
+          <div class="content-text">
             <h2>Ghost Wife</h2> 
           </div> 
-          <div class="content-text10">
+          <div class="content-text">
             <h2>The Ghosts of the Servants</h2> 
            </div> 
-          <div class="content-text11">
+          <div class="content-text">
             <h2>Cricket</h2> 
           </div> 
-          <div class="content-text12">
+          <div class="content-text">
             <h2>Snake Charmer</h2> 
           </div> 
-          <div class="content-text13">
+          <div class="content-text">
             <h2>Sharp Knife</h2> 
           </div> 
-          <div class="content-text14">
+          <div class="content-text">
             <h2>Mouse Show</h2> 
           </div> 
-          <div class="content-text15">
+          <div class="content-text">
             <h2>Righteous Dog</h2> 
           </div> 
-          <div class="content-text16">
+          <div class="content-text">
             <h2>Wolf</h2> 
           </div> 
-          <div class="content-text17">
+          <div class="content-text">
             <h2>Boys’ son</h2> 
           </div> 
-          <div class="content-text18">
+          <div class="content-text">
             <h2>Male Variant</h2> 
           </div> 
-          <div class="content-text19">
+          <div class="content-text">
             <h2>Dragon</h2> 
           </div> 
-          <div class="content-text20">
+          <div class="content-text">
             <h2>Mantis catching snakes</h2> 
           </div> 
-          <div class="content-text21">
+          <div class="content-text">
             <h2>Qiongqi</h2> 
           </div> 
-          <div class="content-text22">
+          <div class="content-text">
             <h2>Bo</h2> 
           </div> 
-          <div class="content-text23">
+          <div class="content-text">
             <h2>Dijiang</h2> 
           </div> 
-          <div class="content-text24">
+          <div class="content-text">
             <h2>Bifang</h2> 
           </div> 
-          <div class="content-text25">
+          <div class="content-text">
             <h2>Zheng</h2> 
           </div> 
-          <div class="content-text26">
+          <div class="content-text">
             <h2>Phoenix</h2> 
           </div> 
-          <div class="content-text27">
+          <div class="content-text">
             <h2> Nine-tailed Fox</h2> 
           </div> 
-          <div class="content-text28">
+          <div class="content-text">
             <h2>Xuangui</h2> 
           </div> 
-          <div class="content-text29">
+          <div class="content-text">
             <h2>Chiru</h2> 
           </div> 
-          <div class="content-text30">
+          <div class="content-text">
             <h2>Shusi</h2> 
           </div> 
        </div>
