--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
 	<div class="p-container flex flex-row flex-nowrap">
 		<div class="left-container flex-none h-screen flex flex-auto flex-col-reverse justify-between">
-			<div class="filter">
-				<div class="ghosts">Ghosts</div>
-				<div class="oddities">Oddities</div>
-				<div class="monsters">Monsters</div>
+			<div class="small-text">
+				<div class="filter">Filter</div>
+				<div class="introduction">Introduction</div>
 			</div>
 
 			<div class="title flex flex-auto justify-end">
