add-intro-filter

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<div class="p-container flex flex-row flex-nowrap">
 		<div class="left-container flex-none h-screen flex flex-auto flex-col-reverse justify-between">
 			<div class="small-text">
-				<div class="filter">Filter</div>
-				<div class="introduction">Introduction</div>
+				<a href="filter.html"><div class="filter">Filter</div></a>
+				<a href="introduction.html"><div class="introduction">Introduction</div></a>
 			</div>
 
 			<div class="title flex flex-auto justify-end">
@@ -40,7 +40,7 @@
 			</div>
 		</div>
 
-		<div id="hidden" class="w-1/2 h-screen  flex flex-auto article"
+		<div id="hidden" class="w-1/2 h-screen flex flex-auto article"
 			style="color: #c53030;overflow-x: auto;display: none;">
 		</div>
 
